# py-Monocle3

./: AUDIT.md  DISCOVERY.md  MATH.md  README.md  RECONSTRUCTION_REPORT.md  pyproject.toml
examples/: evolution.ipynb  tutorial_synth.ipynb
examples/.ipynb_checkpoints/: compare_R_vs_Python-checkpoint.ipynb  function_by_function_R_parity-checkpoint.ipynb  visualization_R_parity-checkpoint.ipynb
pymonocle3/: __init__.py
pymonocle3_bio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_smoke.py
